azureps-cmdlets-docs/ResourceManager/AzureRM.Batch/v3.2.0/AzureRM.Batch.md
---
Module Name: AzureRM.Batch
Module Guid: Batch_Cmdlets_D48CF693-4125-4D2D-879
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 4.0.0.0
Locale: en-US
content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/AzureBatch/Commands.Batch/help/AzureRM.Batch.md
original_content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/AzureBatch/Commands.Batch/help/AzureRM.Batch.md
gitcommit: https://github.com/Azure/azure-powershell/blob/9d36b3fc507d36b49b1ec3ae7cb43bbccbfe5381
---

# AzureRM.Batch Module
## Description
The Azure Batch cmdlets in the Azure module enable you to manage Microsoft Azure Batch services in Azure PowerShell.

## AzureRM.Batch Cmdlets
### [Disable-AzureBatchAutoScale](Disable-AzureBatchAutoScale.md)
Disables automatic scaling of a pool.

### [Disable-AzureBatchComputeNodeScheduling](Disable-AzureBatchComputeNodeScheduling.md)
Disables task scheduling on the specified compute node.

### [Disable-AzureBatchJob](Disable-AzureBatchJob.md)
Disables a Batch job.

### [Disable-AzureBatchJobSchedule](Disable-AzureBatchJobSchedule.md)
Disables a Batch job schedule.

### [Enable-AzureBatchAutoScale](Enable-AzureBatchAutoScale.md)
Enables automatic scaling of a pool.

### [Enable-AzureBatchComputeNodeScheduling](Enable-AzureBatchComputeNodeScheduling.md)
Enables task scheduling on the specified compute node.

### [Enable-AzureBatchJob](Enable-AzureBatchJob.md)
Enables a Batch job.

### [Enable-AzureBatchJobSchedule](Enable-AzureBatchJobSchedule.md)
Enables a Batch job schedule.

### [Enable-AzureBatchTask](Enable-AzureBatchTask.md)
Reactivates a task.

### [Get-AzureBatchCertificate](Get-AzureBatchCertificate.md)
Gets the certificates in a Batch account.

### [Get-AzureBatchComputeNode](Get-AzureBatchComputeNode.md)
Gets Batch compute nodes from a pool.

### [Get-AzureBatchJob](Get-AzureBatchJob.md)
Gets Batch jobs for a Batch account or job schedule.

### [Get-AzureBatchJobPreparationAndReleaseTaskStatus](Get-AzureBatchJobPreparationAndReleaseTaskStatus.md)
Gets Batch job preparation and release task status.

### [Get-AzureBatchJobSchedule](Get-AzureBatchJobSchedule.md)
Gets Batch job schedules.

### [Get-AzureBatchJobStatistics](Get-AzureBatchJobStatistics.md)
Gets job summary statistics for a Batch account.

### [Get-AzureBatchNodeAgentSku](Get-AzureBatchNodeAgentSku.md)
Gets Batch node agent SKUs available in a Batch account.

### [Get-AzureBatchNodeFile](Get-AzureBatchNodeFile.md)
Gets the properties of Batch node files.

### [Get-AzureBatchNodeFileContent](Get-AzureBatchNodeFileContent.md)
Gets a Batch node file.

### [Get-AzureBatchPool](Get-AzureBatchPool.md)
Gets Batch pools under the specified Batch account.

### [Get-AzureBatchPoolStatistics](Get-AzureBatchPoolStatistics.md)
Gets pool summary statistics for a Batch account.

### [Get-AzureBatchPoolUsageMetrics](Get-AzureBatchPoolUsageMetrics.md)
Gets pool usage metrics for a Batch account.

### [Get-AzureBatchRemoteDesktopProtocolFile](Get-AzureBatchRemoteDesktopProtocolFile.md)
Gets an RDP file from a compute node.

### [Get-AzureBatchRemoteLoginSettings](Get-AzureBatchRemoteLoginSettings.md)
Gets remote logon settings for a compute node.

### [Get-AzureBatchSubtask](Get-AzureBatchSubtask.md)
Gets the subtask information of the specified task.

### [Get-AzureBatchTask](Get-AzureBatchTask.md)
Gets the Batch tasks for a job.

### [Get-AzureRmBatchAccount](Get-AzureRmBatchAccount.md)
Gets a Batch account in the current subscription.

### [Get-AzureRmBatchAccountKeys](Get-AzureRmBatchAccountKeys.md)
Gets the keys of a Batch account.

### [Get-AzureRmBatchApplication](Get-AzureRmBatchApplication.md)
Gets information about the specified application.

### [Get-AzureRmBatchApplicationPackage](Get-AzureRmBatchApplicationPackage.md)
Gets information about an application package in a Batch account.

### [Get-AzureRmBatchLocationQuotas](Get-AzureRmBatchLocationQuotas.md)
Gets the Batch service quotas for your subscription at the given location.

### [New-AzureBatchCertificate](New-AzureBatchCertificate.md)
Adds a certificate to the specified Batch account.

### [New-AzureBatchComputeNodeUser](New-AzureBatchComputeNodeUser.md)
Creates a user account on a Batch compute node.

### [New-AzureBatchJob](New-AzureBatchJob.md)
Creates a job in the Batch service.

### [New-AzureBatchJobSchedule](New-AzureBatchJobSchedule.md)
Creates a job schedule in the Batch service.

### [New-AzureBatchPool](New-AzureBatchPool.md)
Creates a pool in the Batch service.

### [New-AzureBatchTask](New-AzureBatchTask.md)
Creates a Batch task under a job.

### [New-AzureRmBatchAccount](New-AzureRmBatchAccount.md)
Creates a Batch account.

### [New-AzureRmBatchAccountKey](New-AzureRmBatchAccountKey.md)
Regenerates a key of a Batch account.

### [New-AzureRmBatchApplication](New-AzureRmBatchApplication.md)
Adds an application to the specified Batch account.

### [New-AzureRmBatchApplicationPackage](New-AzureRmBatchApplicationPackage.md)
Creates an application package in a Batch account.

### [Remove-AzureBatchCertificate](Remove-AzureBatchCertificate.md)
Deletes a certificate from an account.

### [Remove-AzureBatchComputeNode](Remove-AzureBatchComputeNode.md)
Removes compute nodes from a pool.

### [Remove-AzureBatchComputeNodeUser](Remove-AzureBatchComputeNodeUser.md)
Deletes a user account from a Batch compute node.

### [Remove-AzureBatchJob](Remove-AzureBatchJob.md)
Deletes a Batch job.

### [Remove-AzureBatchJobSchedule](Remove-AzureBatchJobSchedule.md)
Removes a Batch job schedule.

### [Remove-AzureBatchNodeFile](Remove-AzureBatchNodeFile.md)
Deletes a node file for a task or compute node.

### [Remove-AzureBatchPool](Remove-AzureBatchPool.md)
Deletes the specified Batch pool.

### [Remove-AzureBatchTask](Remove-AzureBatchTask.md)
Deletes a Batch task.

### [Remove-AzureRmBatchAccount](Remove-AzureRmBatchAccount.md)
Removes a Batch account.

### [Remove-AzureRmBatchApplication](Remove-AzureRmBatchApplication.md)
Deletes an application from a Batch account.

### [Remove-AzureRmBatchApplicationPackage](Remove-AzureRmBatchApplicationPackage.md)
Deletes an application package record and the binary file.

### [Reset-AzureBatchComputeNode](Reset-AzureBatchComputeNode.md)
Reinstalls the operating system on the specified compute node.

### [Restart-AzureBatchComputeNode](Restart-AzureBatchComputeNode.md)
Reboots the specified compute node.

### [Set-AzureBatchComputeNodeUser](Set-AzureBatchComputeNodeUser.md)
Modifies properties of an account on a Batch compute node.

### [Set-AzureBatchJob](Set-AzureBatchJob.md)
Updates a Batch job.

### [Set-AzureBatchJobSchedule](Set-AzureBatchJobSchedule.md)
Sets a job schedule.

### [Set-AzureBatchPool](Set-AzureBatchPool.md)
Updates the properties of a pool.

### [Set-AzureBatchPoolOSVersion](Set-AzureBatchPoolOSVersion.md)
Changes the operating system version of the specified pool.

### [Set-AzureBatchTask](Set-AzureBatchTask.md)
Updates the properties of a task.

### [Set-AzureRmBatchAccount](Set-AzureRmBatchAccount.md)
Updates a Batch account.

### [Set-AzureRmBatchApplication](Set-AzureRmBatchApplication.md)
Updates settings for the specified application.

### [Start-AzureBatchPoolResize](Start-AzureBatchPoolResize.md)
Starts to resize a pool.

### [Stop-AzureBatchCertificateDeletion](Stop-AzureBatchCertificateDeletion.md)
Cancels a failed deletion of a certificate.

### [Stop-AzureBatchJob](Stop-AzureBatchJob.md)
Stops a Batch job.

### [Stop-AzureBatchJobSchedule](Stop-AzureBatchJobSchedule.md)
Stops a Batch job schedule.

### [Stop-AzureBatchPoolResize](Stop-AzureBatchPoolResize.md)
Stops a pool resize operation.

### [Stop-AzureBatchTask](Stop-AzureBatchTask.md)
Stops a Batch task.

### [Test-AzureBatchAutoScale](Test-AzureBatchAutoScale.md)
Gets the result of an automatic scaling formula on a pool.

